--- a/ЗАПОВІДНИК_НП1/ЗАПОВІДНИК_НП1.vcxproj.filters
+++ b/ЗАПОВІДНИК_НП1/ЗАПОВІДНИК_НП1.vcxproj.filters
@@ -95,5 +95,8 @@
     <ClInclude Include="Error.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Repository.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
